@@ -83,7 +83,7 @@ jsonrpc = localhost:8000
 # Number of retries on database operational error
 # retry = 5
 
-# Default database language code
+# Default language code
 # language = en_US
 
 # Timezone of the server
